tests/api/reference/negative/13-late-layout-file.asm
late_layout {
    emit.bytes(fs.read_bytes("../13-files-data/banner.txt"))
}
